# rp2040-explore

./: .gitignore  README.md
asm/blink/: CMakeLists.txt  blink.s
asm/hello/: CMakeLists.txt  hello.s
data-transfer/: adc_uart.py  fft.py  host.py  pico.py  plot.py  pwm_dac.py  source.py
frequency-counter/: frequency.py
irq-timer/: CMakeLists.txt  README.md  count.pio  irq.c
pico-panda/: quad_generator.py
scope/: pico.py  view.py
tool/: CMakeLists.txt  tool.c
µPython-real-time/: adc_explore.py  adc_pacing.py  adc_reg.py  asm_byte_swap.py  asm_data.py  asm_gpio.py  asm_gpio_pio.py  bytes.py  dma_adc.py  dma_copy.py  dma_pio.py  dma_pio_low_high.py  encoder_test.py  five_bit_adc_saw.py  frequency_counter.py  gpio_reg.py  interp_reg.py  irq_time.py  pio_irq.py  pio_pwm_dma.py  pio_saw.py  pio_timer.py  pwm.py  pwm_dac.py  square_counter.py  square_wave.py  time_sleep.py  uart.py  uart_dma.py  uart_thread.py
